--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/CrankesterStyleEver"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -21,36 +22,30 @@
 
     <Button
         android:id="@+id/leftbtn"
-        android:layout_width="160dp"
+        android:layout_width="120dp"
         android:layout_height="52dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:text="@string/leftbtn_key"
-        app:layout_constraintEnd_toStartOf="@+id/rightbtn"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/benz" />
 
-    <Button
-        android:id="@+id/rightbtn"
-        android:layout_width="160dp"
-        android:layout_height="52dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/rightbtn_key"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/leftbtn"
-        app:layout_constraintTop_toBottomOf="@+id/benz" />
 
     <TextView
         android:id="@+id/firstLine"
+        style="@style/CrankesterStyleEver"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
         android:layout_marginEnd="16dp"
+        android:background="#8D00BCD4"
         android:text="@string/firstlinetext"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rightbtn" />
+        app:layout_constraintTop_toBottomOf="@+id/leftbtn" />
 
     <TextView
         android:id="@+id/secondLine"
+        style="@style/CrankesterStyleEver"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -61,6 +56,7 @@
 
     <TextView
         android:id="@+id/thirdLine"
+        style="@style/CrankesterStyleEver"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -70,17 +66,8 @@
         app:layout_constraintTop_toBottomOf="@+id/secondLine" />
 
     <TextView
-        android:id="@+id/leftBox"
-        android:layout_width="100dp"
-        android:layout_height="0dp"
-        android:background="#5CEC6C6C"
-        android:text="@string/leftboxtext"
-        app:layout_constraintBottom_toBottomOf="@+id/thirdLine"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/firstLine" />
-
-    <TextView
         android:id="@+id/editTextTextMultiLine2"
+        style="@style/AllerCrankesterStyleEver"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -94,5 +81,19 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/greetings"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="@string/greetingHint"
+        app:layout_constraintBottom_toBottomOf="@+id/leftbtn"
+        app:layout_constraintEnd_toStartOf="@+id/leftbtn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/leftbtn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
